with js file added

--- a/reservations/templates/reservations/index.html
+++ b/reservations/templates/reservations/index.html
@@ -8,10 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservations</title>
     <link rel="stylesheet" href="{% static 'reservations/styles.css' %}">
+    <script src="{% static 'reservations/script.js' %}" type="text/javascript"></script>  
+    
 </head>
 <body>
     <h1>Reservations</h1>
     <p>there are </p>
+
+    <button onclick="hello()">click Me</button>
 
 </body>
 </html>
